revamp context manager

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -88,6 +88,7 @@ dependencies = [
   "chunkr-ai>=0.3.7",
   "reportlab>=4.0.0",
   "freestyle>=0.0.17",
+  "anthropic>=0.69.0",
 ]
 
 [project.urls]
