--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,29 @@
+# ============================================================================
+# SUNA DOCKER COMPOSE - LOCAL DEVELOPMENT
+# ============================================================================
+# This Docker Compose file runs Suna services (Backend, Worker, Frontend, Redis)
+#
+# ⚠️  IMPORTANT LIMITATION - LOCAL SUPABASE:
+# Currently, local Supabase (via `npx supabase start`) is NOT supported with
+# Docker Compose due to network configuration complexity.
+#
+# TODO: Integrate Supabase services directly into this compose file to enable
+#       full Docker-based local development with proper network configuration.
+#
+# CURRENT WORKAROUND:
+# - Use cloud Supabase for Docker Compose setup
+# - OR run everything manually (no Docker) to use local Supabase
+#
+# Quick Start:
+#   docker compose up -d          # Start all services
+#   docker compose down           # Stop all services
+#   docker compose logs -f        # View all logs
+#
+# Access:
+#   - Suna Frontend:     http://localhost:3000
+#   - Suna Backend API:  http://localhost:8000
+# ============================================================================
+
 services:
   redis:
     image: redis:7-alpine
@@ -22,16 +48,12 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./backend/.env:/app/.env
-    env_file:
-      - ./backend/.env
+      - ./backend/.env:/app/.env:ro
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_PASSWORD=
       - REDIS_SSL=False
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     depends_on:
       redis:
         condition: service_healthy
@@ -47,15 +69,11 @@ services:
     command: uv run dramatiq --skip-logging --processes 4 --threads 4 run_agent_background
     volumes:
       - ./backend/.env:/app/.env:ro
-    env_file:
-      - ./backend/.env
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_PASSWORD=
       - REDIS_SSL=False
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     depends_on:
       redis:
         condition: service_healthy
@@ -67,10 +85,6 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    volumes:
-      - ./frontend/.env.local:/app/.env.local:ro
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     depends_on:
       - backend
 
